--- a/default.env
+++ b/default.env
@@ -1,12 +1,12 @@
 # Change this for logging and backup, see "Environment variables" in the README.md
-TZ=Europe/Berlin  
+TZ=Europe/Lisbon  
 ALWAYS_UPDATE_ON_START=true
 MULTITHREAD_ENABLED=true
-COMMUNITY_SERVER=true
+COMMUNITY_SERVER=false
 BACKUP_ENABLED=true
-BACKUP_CRON_EXPRESSION=0 * * * *
-BACKUP_RETENTION_POLICY=false
-BACKUP_RETENTION_AMOUNT_TO_KEEP=30
+BACKUP_CRON_EXPRESSION=*/1 * * * *
+BACKUP_RETENTION_POLICY=true
+BACKUP_RETENTION_AMOUNT_TO_KEEP=5
 STEAMCMD_VALIDATE_FILES=true
 # Change this to manual if you want to edit your configs yourself
 SERVER_SETTINGS_MODE=auto 
@@ -64,9 +64,9 @@ COOP_PLAYER_MAX_NUM=4
 MAX_PLAYERS=32
 SERVER_NAME=jammsen-docker-generated-###RANDOM###
 SERVER_DESCRIPTION=Palworld-Dedicated-Server running in Docker by jammsen
-ADMIN_PASSWORD=adminPasswordHere
-SERVER_PASSWORD=serverPasswordHere
-PUBLIC_PORT=8211
+ADMIN_PASSWORD=wEF
+SERVER_PASSWORD=wef
+PUBLIC_PORT=
 PUBLIC_IP=
 RCON_ENABLED=true
 RCON_PORT=25575
